[project]
name = "pepy-chart"
version = "0.1.0"
description = "Create line plots of PePy stats."
authors = [
    {name = "Mike Letts",email = "lettsmt@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mplcyberpunk (>=0.7.6,<0.8.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "click (>=8.2.1,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 79
target-version = ["py310"]
verbose = true

[tool.isort]
line_length = 79
ensure_newline_before_comments = true
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[tool.poetry.scripts]
pepy-chart = "pepy_chart.cli:create"